Make View::GetContentsBounds() consistent with View::GetInsets()

This only affects two classes, Link and BubbleFrameView, both of which
were overriding GetInsets() and using them in nonstandard ways.

This CL both makes the functions in View consistent, and also rectifies
the logic in Link and in BubbleFrameView.

Bug: 910724
Change-Id: Ib7b28406cefdd216ceb946fd083f2916605243eb
Reviewed-on: https://chromium-review.googlesource.com/c/1357516
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613603}
Former-commit-id: 6cdfa8d71ae521c8e55ee8259db174f15ed849f2